methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: '<-' expected but ')' found.
  for (i to 1 to nbPas) {
                      ^MethodsArgs:11: error: illegal start of simple expression
} 
^