methods.args.MethodsArgs.scala.code
def move(nbPas:Int,versLAvant:Boolean) {
  for (i to 1 to nbPas) {
    if (versLAvant) {
      avance();
    } else {
      recule();
    }
    
  }
}